attached_assets/Pasted--workspace-jest-PASS-test-unit-storage-test-js-MemStorage-Class-constructor-should-1749379563268_1749379563269.txt
~/workspace$ jest
 PASS  test/unit/storage.test.js
  MemStorage Class
    constructor
      ✓ should initialize with empty users Map (7 ms)
      ✓ should initialize currentId to 1 (1 ms)
      ✓ should create independent instances (2 ms)
    createUser
      ✓ should create user with auto-generated ID (2 ms)
      ✓ should increment ID for subsequent users
      ✓ should convert undefined fields to null (1 ms)
      ✓ should preserve null values (1 ms)
      ✓ should preserve falsy non-null values (1 ms)
      ✓ should store user with all fields (1 ms)
    getUser
      ✓ should return user by ID (1 ms)
      ✓ should return undefined for non-existent user
      ✓ should return undefined for invalid ID types (11 ms)
    getUserByUsername
      ✓ should return user by username (1 ms)
      ✓ should return undefined for non-existent username
      ✓ should handle case-sensitive username search
      ✓ should find correct user among multiple users
    getAllUsers
      ✓ should return empty array when no users exist (1 ms)
      ✓ should return all users (1 ms)
      ✓ should return new array (not reference to internal storage) (3 ms)
    deleteUser
      ✓ should delete existing user and return true
      ✓ should return false for non-existent user (1 ms)
      ✓ should handle multiple deletions (1 ms)
    clear
      ✓ should remove all users
      ✓ should reset ID counter (1 ms)
      ✓ should handle clearing empty storage (1 ms)
  Storage Singleton
    ✓ should export singleton instance (1 ms)
    ✓ should maintain state across module imports

 PASS  test/unit/utils.test.js
  Utils module
    greet function
      ✓ should return greeting with provided name (2 ms)
      ✓ should handle empty string (1 ms)
      ✓ should handle special characters
    add function
      ✓ should add positive numbers correctly (1 ms)
      ✓ should add negative numbers correctly (1 ms)
      ✓ should handle zero (1 ms)
      ✓ should handle decimal numbers (1 ms)
      ✓ should handle infinity
    isEven function
      ✓ should return true for even numbers (1 ms)
      ✓ should return false for odd numbers (1 ms)
      ✓ should handle negative numbers (1 ms)
      ✓ should handle decimal numbers (6 ms)

 FAIL  test/integration/workflows.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/workspace/test/integration/workflows.test.js:19
    const { ensureMongoDB, ensureUnique } = require('../../lib/database-utils');
            ^

    SyntaxError: Identifier 'ensureMongoDB' has already been declared

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1505:14)

 PASS  test/unit/http-utils.test.js
  HTTP Utils Module
    sendNotFound function
      ✓ should send 404 status with custom message (7 ms)
      ✓ should handle empty message (1 ms)
      ✓ should handle null message (2 ms)
      ✓ should handle undefined message (2 ms)
      ✓ should handle long message (5 ms)
      ✓ should handle special characters in message (3 ms)
      ✓ should return response object for chaining (2 ms)

 FAIL  test/unit/database-utils.test.js
  Database Utils module
    ensureMongoDB function
      ✕ should return true when database is connected (8 ms)
      ✓ should return false and send 503 when database is disconnected (1 ms)
      ✓ should return false and send 503 when database is connecting (1 ms)
      ✕ should handle connection state check errors (2 ms)
    ensureUnique function
      ✓ should return true when no duplicate is found (2 ms)
      ✓ should return false and send 409 when duplicate is found (1 ms)
      ✓ should throw error when database query fails (1 ms)

  ● Database Utils module › ensureMongoDB function › should return true when database is connected

    expect(received).toBe(expected) // Object.is equality

    Expected: true
    Received: false

      39 |       const result = ensureMongoDB(mockRes);
      40 |
    > 41 |       expect(result).toBe(true);
         |                      ^
      42 |       expect(mockRes.status).not.toHaveBeenCalled();
      43 |       expect(mockRes.json).not.toHaveBeenCalled();
      44 |     });

      at Object.<anonymous> (test/unit/database-utils.test.js:41:22)

  ● Database Utils module › ensureMongoDB function › should handle connection state check errors

    expect(jest.fn()).toHaveBeenCalledWith(...expected)

    Expected: 500
    Received: 503

    Number of calls: 1

      72 |
      73 |       expect(result).toBe(false);
    > 74 |       expect(mockRes.status).toHaveBeenCalledWith(500);
         |                              ^
      75 |       expect(mockRes.json).toHaveBeenCalledWith({ message: 'Error checking database connection' });
      76 |       
      77 |       // Reset to normal state

      at Object.<anonymous> (test/unit/database-utils.test.js:74:30)

 PASS  test/integration/module.test.js
  QMemory Module Integration
    ✓ should export all expected functions and classes (8 ms)
    ✓ should provide working storage singleton (2 ms)
    ✓ should allow multiple MemStorage instances (1 ms)
    ✓ should provide consistent HTTP response helpers (1 ms)
    ✓ should handle cross-module interactions (1 ms)
    ✓ should maintain singleton state across multiple imports
    ✓ should handle error scenarios gracefully (3 ms)

 PASS  test/unit/document-ops.test.js
  Document Operations Module
    performUserDocOp
      ✓ should execute operation callback and return result (7 ms)
      ✓ should return null for CastError (invalid ObjectId) (2 ms)
      ✓ should re-throw non-CastError errors (4 ms)
      ✓ should handle null result from operation (1 ms)
    findUserDoc
      ✓ should find document by ID and user (1 ms)
      ✓ should return null when document not found (1 ms)
      ✓ should handle invalid ObjectId gracefully
    deleteUserDoc
      ✓ should delete document by ID and user (1 ms)
      ✓ should return null when document not found for deletion
    userDocActionOr404
      ✓ should return document when action succeeds
      ✓ should send 404 when action returns null
      ✓ should re-throw errors from action (8 ms)
    fetchUserDocOr404
      ✓ should return document when found (2 ms)
      ✓ should send 404 when document not found (1 ms)
    deleteUserDocOr404
      ✓ should return deleted document when found (2 ms)
      ✓ should send 404 when document not found for deletion (1 ms)
    listUserDocs
      ✓ should return all user documents with sorting (1 ms)
      ✓ should return empty array when no documents found (1 ms)
      ✓ should handle null sort parameter (1 ms)
    createUniqueDoc
      ✓ should create document when unique (2 ms)
      ✓ should return undefined when duplicate exists (2 ms)
      ✓ should re-throw database errors (2 ms)
    updateUserDoc
      ✓ should update document when found and unique (2 ms)
      ✓ should return undefined when document not found (1 ms)
      ✓ should return undefined when uniqueness check fails (1 ms)
      ✓ should skip uniqueness check when unique fields not changing (1 ms)
      ✓ should handle update without uniqueness constraint (1 ms)

-|---------|----------|---------|---------|-------------------
 | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-|---------|----------|---------|---------|-------------------
 |    90.9 |    96.66 |     100 |    90.9 |                   
  |     100 |      100 |     100 |     100 |                   
   |     100 |      100 |     100 |     100 |                   
  |   90.57 |    96.66 |     100 |   90.57 |                   
   |   79.16 |       75 |     100 |   79.16 | 76-86             
   |    90.8 |      100 |     100 |    90.8 | ...16-317,448-449 
   |     100 |      100 |     100 |     100 |                   
   |     100 |      100 |     100 |     100 |                   
   |     100 |      100 |     100 |     100 |                   
-|---------|----------|---------|---------|-------------------
Test Suites: 2 failed, 5 passed, 7 total
Tests:       2 failed, 85 passed, 87 total
Snapshots:   0 total
Time:        1.941 s, estimated 2 s
Ran all test suites.